--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,8 +14,8 @@ main:
   - title: "Teaching"
     url: /teaching/    
 
-  - title: "Projects"
-    url: /projects/
+  # - title: "Projects"
+  #   url: /projects/
     
   - title: "Portfolio"
     url: /portfolio/
