--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title                    : "Home"
 title_separator          : "-"
 name                     : &name "Lingcao Huang"
 description              : &description "personal description"
-url                      : https://lingcaohuang.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://yghlc.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "yghlc/lingcaohuang"
 
