--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title_separator          : "-"
 name                     : &name "Lingcao Huang"
 description              : &description "personal description"
 url                      : https://yghlc.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : "" # the subpath of your site, e.g. "/blog"
+baseurl                  : "/lingcaohuang" # the subpath of your site, e.g. "/blog"
 repository               : "yghlc/lingcaohuang"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
